A lot more of test adaptation + clean code