@@ -6,61 +6,61 @@ import com.inferrules.comby.jsonResponse.CombyRewrite;
 import com.inferrules.comby.operations.BasicCombyOperations;
 import com.matching.fgpdg.MatchedNode;
 import io.vavr.control.Try;
+import org.eclipse.jdt.core.dom.CompilationUnit;
 import org.inferrules.Utils;
 import org.junit.jupiter.api.Assertions;
 import org.junit.jupiter.api.Test;
-import org.python.antlr.ast.FunctionDef;
-import org.python.antlr.ast.Module;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 import static org.inferrules.Utils.getMatchedNodes;
 
 public class TestPyEvolve {
     @Test
     void testPipeline1() throws Exception {
-        String filename="test26";
+        String filename = "test26";
         String lpatternname = "pattern12";
         String rpatternname = "r_pattern12";
-        BasicCombyOperations op = new BasicCombyOperations();
 
-        Module codeModule = Utils.getCompilationUnit("author/project/"+filename+".py");
-        String code = codeModule.getInternalBody().get(1).toString();
-        Module lpatternModule = Utils.getCompilationUnitForTemplate(Utils.getPathToResources("author/project/"+lpatternname+".py"));
-        Module rpatternModule = Utils.getCompilationUnitForTemplate(Utils.getPathToResources("author/project/"+rpatternname+".py"));
-        List<MatchedNode> matchedNodes = getMatchedNodes(filename, lpatternname,rpatternname, codeModule, lpatternModule,rpatternModule);
-        List<MatchedNode> allMatchedGraphs = matchedNodes.stream().filter(MatchedNode::isAllChildsMatched).collect(Collectors.toList());
-        AdaptRule aRule= new AdaptRule(allMatchedGraphs.get(0), (FunctionDef) codeModule.getInternalBody().get(1),rpatternModule);
+        CompilationUnit codeModule = Utils.getCompilationUnit("author/project/" + filename + ".py");
+        String code = Utils.getAllMethods(codeModule).getFirst().toString();
+        CompilationUnit lpatternModule = Utils.getCompilationUnitForTemplate(Utils.getPathToResources("author/project/" + lpatternname + ".py"));
+        CompilationUnit rpatternModule = Utils.getCompilationUnitForTemplate(Utils.getPathToResources("author/project/" + rpatternname + ".py"));
+        List<MatchedNode> matchedNodes = getMatchedNodes(filename, lpatternname, rpatternname, codeModule, lpatternModule, rpatternModule);
+        List<MatchedNode> allMatchedGraphs = matchedNodes.stream().filter(MatchedNode::isAllChildsMatched).toList();
+        AdaptRule aRule = new AdaptRule(allMatchedGraphs.getFirst(), Utils.getAllMethods(codeModule).getFirst(), rpatternModule);
         Rule rule = aRule.getAdaptedRule();
-        Try<CombyRewrite> changedCode = op.rewrite(rule.getLHS(), rule.getRHS(), code, ".python");
-        Assertions.assertEquals("def function1(sentence, callbacks):\n" +
-                "    ff = {one:1,two:2}\n" +
-                "    print(ff)\n" +
-                "    z = np.sum(ff.values())\n" +
-                "return z\n",changedCode.get().getRewrittenSource());
+        Try<CombyRewrite> changedCode = BasicCombyOperations.rewrite(rule.getLHS(), rule.getRHS(), code, ".python");
+        Assertions.assertEquals("""
+                def function1(sentence, callbacks):
+                    ff = {one:1,two:2}
+                    print(ff)
+                    z = np.sum(ff.values())
+                return z
+                """, changedCode.get().getRewrittenSource());
     }
 
     @Test
     void testPipelineForProject() throws Exception {
-        String filename="test26";
+        String filename = "test26";
         String lpatternname = "pattern12";
         String rpatternname = "r_pattern12";
-        BasicCombyOperations op = new BasicCombyOperations();
 
-        Module codeModule = Utils.getCompilationUnit("author/project/"+filename+".py");
-        String code = codeModule.getInternalBody().get(1).toString();
-        Module lpatternModule = Utils.getCompilationUnitForTemplate(Utils.getPathToResources("author/project/"+lpatternname+".py"));
-        Module rpatternModule = Utils.getCompilationUnitForTemplate(Utils.getPathToResources("author/project/"+rpatternname+".py"));
-        List<MatchedNode> matchedNodes = getMatchedNodes(filename, lpatternname,rpatternname, codeModule, lpatternModule,rpatternModule);
-        List<MatchedNode> allMatchedGraphs = matchedNodes.stream().filter(MatchedNode::isAllChildsMatched).collect(Collectors.toList());
-        AdaptRule aRule= new AdaptRule(allMatchedGraphs.get(0), (FunctionDef) codeModule.getInternalBody().get(1),rpatternModule);
+        CompilationUnit codeModule = Utils.getCompilationUnit("author/project/" + filename + ".py");
+        String code = Utils.getAllMethods(codeModule).getFirst().toString();
+        CompilationUnit lpatternModule = Utils.getCompilationUnitForTemplate(Utils.getPathToResources("author/project/" + lpatternname + ".py"));
+        CompilationUnit rpatternModule = Utils.getCompilationUnitForTemplate(Utils.getPathToResources("author/project/" + rpatternname + ".py"));
+        List<MatchedNode> matchedNodes = getMatchedNodes(filename, lpatternname, rpatternname, codeModule, lpatternModule, rpatternModule);
+        List<MatchedNode> allMatchedGraphs = matchedNodes.stream().filter(MatchedNode::isAllChildsMatched).toList();
+        AdaptRule aRule = new AdaptRule(allMatchedGraphs.getFirst(), Utils.getAllMethods(codeModule).getFirst(), rpatternModule);
         Rule rule = aRule.getAdaptedRule();
-        Try<CombyRewrite> changedCode = op.rewrite(rule.getLHS(), rule.getRHS(), code, ".python");
-        Assertions.assertEquals("def function1(sentence, callbacks):\n" +
-                "    ff = {one:1,two:2}\n" +
-                "    print(ff)\n" +
-                "    z = np.sum(ff.values())\n" +
-                "return z\n",changedCode.get().getRewrittenSource());
+        Try<CombyRewrite> changedCode = BasicCombyOperations.rewrite(rule.getLHS(), rule.getRHS(), code, ".python");
+        Assertions.assertEquals("""
+                def function1(sentence, callbacks):
+                    ff = {one:1,two:2}
+                    print(ff)
+                    z = np.sum(ff.values())
+                return z
+                """, changedCode.get().getRewrittenSource());
     }
 }
